# mcp-mealie

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-version-bump.sh
src/mealie_mcp/: __init__.py  auth.py  client.py  formatting.py  ingredient_resolver.py  server.py  validation.py
tests/: test_auth.py  test_client.py  test_formatting.py  test_ingredient_resolver.py  test_server.py  test_validation.py
